# ArdroneControl

./: .gitignore  README.md  readme.txt  readme_for_develop.txt
bagfiles/: savelog.txt  subset.bag
src/ardrone_tutorials/src/: drone_video_display.py
src/drone/: CMakeLists.txt  package.xml
src/drone/include/drone/: control.h  image.h  utils.h
src/drone/src/: control.cpp  control_tmp.cpp  image.cpp  main.cpp
src/drone_cv/: CMakeLists.txt  CMakeLists.txt_bkp  package.xml
src/drone_cv/include/drone_cv/: control.h
src/drone_cv/scripts/: forward.py
src/drone_cv/src/: control.cpp  control.h  main.cpp
